--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand text-white" href="index.php">Achraf's website</a>
+    <a class="navbar-brand text-white" href="index.html">Achraf's website</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active text-white" href="aboutme.php">Over mij</a>
+          <a class="nav-link active text-white" href="aboutme.html">Over mij</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
