--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,10 @@
 <div class="container">
   <div class="row justify-content-center mt-8">
     <div class="col-md-8">
-      <p class="text-left text-center-md">Welkom </p>
+      <p class="text-left text-center-md">Hallo, ik ben Achraf El Mojahid en ik heb een passie voor webontwikkeling. Op dit moment ben ik 18 jaar oud en volg ik een opleiding aan het Technova College, waar ik mij specialiseer in de wereld van webontwikkeling. Tijdens mijn reis op dit gebied heb ik al diverse interessante projecten ontdekt, die ik graag met anderen deel via mijn 'projecten' pagina.<br><br> 
+        Tijdens mijn studie aan het college heb ik niet alleen mijn technische vaardigheden verbeterd, maar ook mijn creativiteit aangesproken om innovatieve oplossingen te bedenken voor complexe vraagstukken. Ik hecht veel waarde aan hard werken en toewijding, en daarom zet ik me volledig in om mijn vaardigheden verder te ontwikkelen en mijn doelen te bereiken.<br><br>
+        Als iemand die gepassioneerd en gedreven is, zoek ik voortdurend naar nieuwe mogelijkheden en uitdagingen om mezelf verder te ontwikkelen. Ik kijk vol optimisme naar wat de toekomst brengt in het domein van webontwikkeling, en ik ben vastbesloten om mijn passie om te zetten in een bloeiende carrière. <br><br>
+        Als je ergens over wilt praten of vragen hebt met betrekking tot webontwikkeling, voel je vrij om me een bericht te sturen. Ik ben altijd beschikbaar voor boeiende gesprekken en het uitwisselen van kennis!</p>
     </div>
   </div>
 </div>
