--- a/aboutme.html
+++ b/aboutme.html
@@ -24,9 +24,9 @@
             Projecten
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Unity</a></li>
-            <li><a class="dropdown-item" href="#">Web</a></li>
-            <li><a class="dropdown-item" href="#">App</a></li>
+            <li><a class="dropdown-item" href="unity.html">Unity</a></li>
+            <li><a class="dropdown-item" href="web.html">Web</a></li>
+            <li><a class="dropdown-item" href="app.html">App</a></li>
           </ul>
         </li>
         <li class="nav-item">
