--- a/web.html
+++ b/web.html
@@ -49,11 +49,10 @@
 <div class="container">
   <div class="row justify-content-center mt-8">
     <div class="col-md-8">
-      <p class="text-left text-center-md"> <img class="Unity1" src="foto's/KDexamenMain.png" alt="Unity examen"><br><br>
-        Deze unity project is een 2D platformer game. Hiermee heb ik mijn examen behaald op mijn college. Ik heb hier in totaal 5 dagen lang aan gewerkt en nog daartussen ook suikerfeest. Ik kreeg de kans om die dag in te halen. Dus hiermee was ik super trots ermee dat ik met daarmee ben geslaagd.
-        In de game speel je als een kikker die naar het einde moet bereiken door over verschillende obstakels moet overwinnen. Als je bij de laaste level bent en je hebt de troffee geraakt, dan heb je gewonnen. <br><br>
-        <img class="Unity2" src="foto's/unity1.png" alt="Unity platformer"><br><br>
-        Dit hier is ook een platformer game, maar hier heeft het examen niets te maken. Het is de bedoeling dat je het met z'n tweeën speelt op één computer. verzamel alle appels om het spel te kunnen winnen met jou partner. Hierin heb ik twee weken de tijd voor gehad om: alles te maken, te testen en in te leveren. 
+      <p class="text-left text-center-md"> <img class="Web1" src="foto's/leverin2.png" alt="wordpress"><br><br>
+Deze web project heb ik gemaakt in Wordpress. Dit is de home pagina wanneer je op mijn website terecht komt. Het is ook nog een portofolio, maar dit is om met wordpress te oefenen en te expirimenteren hoe het werkt. het staat online dus als je het wilt bekijken, kan je op deze link drukken: <a href="https://achrafelmojhaid.nl" class="text-decoration-none text-success">WordpressPortofolio</a>.  <br><br>
+        <img class="Web2" src="foto's/website2.png" alt="Homepage oefening"><br><br>
+        Dit hier een oefening voor mijn web examen. het is een homepage waarvan je op de plaatjes moet drukken om de informatie te zien over Ecosymphony. Ik heb hiervoor twee weken de tijd voor om het af te maken en daarmee heb ik als resultaat dit. Een homepage over mijn zelf verzonnen bedrijf Ecosymphony. 
       </p>
     </div>
   </div>
