--- a/Contactme.html
+++ b/Contactme.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active text-white" href="aboutme.html">Contact</a>
+          <a class="nav-link active text-white" href="aboutme.html">Over mij</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,7 +30,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" href="#">Contact</a>
+          <a class="nav-link active text-white" href="Contactme.html">Contact</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
