--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link activet text-white" href="#">Contact</a>
+          <a class="nav-link activet text-white" href="Contactme.html">Contact</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -40,9 +40,8 @@
     </div>
   </div>
 </nav>
-
 <div class="Foto">
-  <img class="MijnFoto" src="foto's/MijnFoto.jpg" alt="Achraf's afbeelding" width="1863" height="400">
+  <img class="MijnFoto" src="foto's/MijnFoto.jpg" alt="Achraf's afbeelding">
   <h1 class="Welkom text-white"> Welkom bij mijn website.</h1>
 </div>
 
@@ -62,4 +61,4 @@
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-</html> 
+</html>
