--- a/app.html
+++ b/app.html
@@ -42,18 +42,17 @@
 </nav>
 
 <div class="Foto">
-  <img class="MijnUnityFoto" src="foto's/Unity.jpg" alt="Achraf's afbeelding" width="1863" height="400">
-  <h1 class="Welkom text-white"> Mijn unity projecten </h1>
+  <img class="MijnUnityFoto" src="foto's/c-sharp-blog.webp" alt="Achraf's afbeelding" width="1863" height="400">
+  <h1 class="Welkom text-white"> Mijn app projecten </h1>
 </div>
 
 <div class="container">
   <div class="row justify-content-center mt-8">
     <div class="col-md-8">
-      <p class="text-left text-center-md"> <img class="Unity1" src="foto's/KDexamenMain.png" alt="Unity examen"><br><br>
-        Deze unity project is een 2D platformer game. Hiermee heb ik mijn examen behaald op mijn college. Ik heb hier in totaal 5 dagen lang aan gewerkt en nog daartussen ook suikerfeest. Ik kreeg de kans om die dag in te halen. Dus hiermee was ik super trots ermee dat ik met daarmee ben geslaagd.
-        In de game speel je als een kikker die naar het einde moet bereiken door over verschillende obstakels moet overwinnen. Als je bij de laaste level bent en je hebt de troffee geraakt, dan heb je gewonnen. <br><br>
-        <img class="Unity2" src="foto's/unity1.png" alt="Unity platformer"><br><br>
-        Dit hier is ook een platformer game, maar hier heeft het examen niets te maken. Het is de bedoeling dat je het met z'n tweeën speelt op één computer. verzamel alle appels om het spel te kunnen winnen met jou partner. Hierin heb ik twee weken de tijd voor gehad om: alles te maken, te testen en in te leveren. 
+      <p class="text-left text-center-md"> <img class="App1" src="foto's/app1.png" alt="Unity examen"><br><br>
+        Deze app project is een 2D memory game. Je moet alle paren vinden om te winnen. Hier had ik twee weken de tijd en daaruit kwam dit.<br><br>
+        <img class="App2" src="foto's/app2.png" alt="Unity platformer"><br><br>
+        Dit hier is een klok die ik ook gemaakt heb met C#. Elke keer wanneer er een seconde voorbij gaat, dan is er een ander achtergrondkleur 
       </p>
     </div>
   </div>
